--- a/client/src/components/NavbarBottom/NavbarBottom.css
+++ b/client/src/components/NavbarBottom/NavbarBottom.css
@@ -1,5 +1,4 @@
 .navbarBottom {
-  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
@@ -8,10 +7,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position:sticky;
   background-color: #FFFFFF;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
   padding-bottom: 20px;
   padding-top: 10px;
+  height: 100px;
 }
 
 .navbarBottom .MuiButton-root {
